--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -314,6 +314,8 @@
                                             <a><i class="fa fa-chart-column"></i>IHS <span class="fa fa-chevron-down"></span></a>
                                             <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "budget_ihs" ? "display:block" : null )">
                                                 <li class="@(ViewBag.SegundoNivel == "listado_ihs" ? "current-page" : null )"><a href="@Url.Action( "listadoIHS", "BG_IHS_item")">Listado IHS</a></li>
+                                                <li class="@(ViewBag.SegundoNivel == "BG_IHS_combinacion" ? "current-page" : null )"><a href="@Url.Action( "index", "BG_IHS_combinacion")">Combinaci&oacute;n IHS</a></li>
+                                                <li class="@(ViewBag.SegundoNivel == "BG_IHS_division" ? "current-page" : null )"><a href="@Url.Action( "index", "BG_IHS_division")">Divisi&oacute;n IHS</a></li>
                                                 @if (User.IsInRole(TipoRoles.BUDGET_IHS_CATALOGOS))
                                                 {
                                                     <li class="link @(ViewBag.SegundoNivel == "budget_ihs_catalogos" ? "active" : null )">
